[package]
name = "clash_subscription_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.44", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rust-ini = "0.21"
blake3 = "1.8.2"
futures = "0.3"
indexmap = "2.9.0"
regex = "1.11.1"
fancy-regex = "0.14.0"
once_cell = "1.21.3"
yaml-rust = "0.4"
rayon = "1.10.0"
glob = "0.3.2"
chardetng = "0.1"

# [[bin]]
# name = "app"
# path = "testdemo/demo01.rs"

# [[bin]]
# name = "main"
# path = "src/main.rs"
